<resources>
    <string name="app_name">Shougo</string>
    <string name="app_name_2">SHOU GO</string>

    <string name="google_map_key">AIzaSyBAbUtJGMFVzbHheJvJCLSxYsdHXbKdW1I</string>

    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="close">關閉</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="send_out">送出</string>

    <string name="select_camera_album">請選擇</string>
    <string name="camera">相機</string>
    <string name="album">相簿</string>

    <string name="permission_error">獲取權限失敗，將導致部分功能無法使用，是否前往授權？</string>
    <string name="please_open_gps">請打開GPS</string>
    <string name="no_gps">尚無ＧＰＳ定位</string>

    <string name="success">成功</string>
    <string name="fail">失敗</string>
    <string name="net_not_good">網路不穩定,請稍後再試</string>
    <string name="remove_fail">刪除失敗</string>
    <string name="you_can_use">您可以盡情使用本系統</string>
    <string name="sure_remove_account">確定要刪除帳號嗎?\n資料刪除後將無法恢復</string>
    <string name="acc_pwd_err">帳號密碼錯誤</string>

    <string name="know_next">我知道了，下一步</string>
    <string name="start_use">立即開始體驗</string>

    <string name="register">註冊</string>
    <string name="have_acc_login">已經有帳號？</string>

    <string name="login">登入</string>
    <string name="logout">登出</string>
    <string name="remember_me">記住我</string>
    <string name="forget_pwd">忘記密碼？</string>
    <string name="no_acc_register">還沒有帳號？</string>
    <string name="register_now">立即註冊</string>

    <string name="create_acc">建立帳號</string>
    <string name="create_new_acc">建立新帳號</string>
    <string name="or">或</string>

    <string name="welcome_login">歡迎您登入</string>

    <string name="email">Email</string>
    <string name="email_hint">請輸入您的電子郵件</string>
    <string name="email_err">Email格式錯誤</string>
    <string name="name">姓名</string>
    <string name="name_hint">請輸入您的姓名</string>
    <string name="name_err">請輸入姓名</string>
    <string name="pwd">密碼</string>
    <string name="pwd_hint">請輸入6-18位數密碼,請區分大小寫</string>
    <string name="pwd_err">密碼需要6-18位數密碼</string>
    <string name="i_agree">我同意</string>
    <string name="privacy">隱私權條款</string>
    <string name="privacy_title">隱私權聲明</string>
    <string name="service">服務條款</string>
    <string name="and">與</string>

    <string name="welcome">歡迎</string>

    <string name="teach_1">依照你的位置\n推薦周遭優惠店家及私藏景點</string>
    <string name="teach_2">手機就是你的私藏口袋</string>
    <string name="teach_2_1">取得電子優惠券真方便</string>
    <string name="teach_3">將想去的地點打包成旅程</string>
    <string name="teach_3_1">立即開始你的旅遊路線規劃</string>

    <string name="features_introduce">功能介紹</string>
    <string name="pass">略過</string>
    <string name="start_now">立即開始</string>

    <string name="favorite">收藏</string>
    <string name="home">首頁</string>
    <string name="taxi">叫車</string>
    <string name="send">物流</string>
    <string name="member">會員</string>

    <string name="other">其他</string>

    <string name="search_discount_attractions">搜尋優惠 或 景點</string>
    <string name="search_discount_attractions2">搜尋店家、景點</string>
    <string name="recommend_discount">推薦優惠</string>
    <string name="more_discount">更多優惠</string>
    <string name="more_attractions">更多商家</string>
    <string name="hot">最熱門</string>
    <string name="best_distance">離你最近</string>
    <string name="best_evaluation">評價最高</string>

    <string name="scan_qr_code">掃描 QR CODE</string>
    <string name="scan_all">掃描QRCode收藏優惠券/店家/景點</string>
    <string name="scan_content_car">掃描QRCode 可以同步登入車機會員</string>
    <string name="scan_success">核對成功</string>
    <string name="scan_fail">核對失敗</string>
    <string name="login_car_fail">登入車機失敗</string>
    <string name="add_favorite_success">新增收藏成功</string>
    <string name="add_favorite_fail">新增收藏失敗</string>
    <string name="login_car_success">登入車機成功</string>

    <string name="notify">通知</string>
    <string name="notify_set">訊息推播</string>

    <string name="search_place">搜尋的位置</string>
    <string name="use_now_location">使用目前位置</string>
    <string name="lastly_search">最近的搜尋</string>
    <string name="pls_enter_right_place">請輸入正確的縣市和區域</string>
    <string name="enter_place">輸入縣市和地區</string>
    <string name="search">搜尋</string>
    <string name="no_data">查無資料</string>
    <string name="s_search_result">的搜尋結果</string>

    <string name="watch_member_info">檢視個人資料</string>
    <string name="notification">提醒</string>
    <string name="opinion">意見反饋</string>
    <string name="cooperation_store">合作店家專區</string>
    <string name="my_car">尋找我的車子</string>
    <string name="remove_account">刪除帳號</string>
    <string name="version">目前版本 Version </string>
    <string name="find_no_car">查無車輛</string>

    <string name="member_info">個人檔案</string>
    <string name="change_head_img">更換大頭貼照</string>
    <string name="user_name">使用者名稱</string>
    <string name="email2">電子郵件</string>
    <string name="login_car">登入車機</string>
    <string name="change_password">修改密碼</string>

    <string name="select_category">選擇類別</string>
    <string name="category">類別</string>
    <string name="location">地區</string>
    <string name="opinion_hint">請輸入您的意見</string>
    <string name="submit">提交</string>

    <string name="watch_store_info">查看店家資訊</string>
    <string name="give_eva">給評價</string>
    <string name="check_eva">查看評價</string>
    <string name="place">位置</string>
    <string name="show_in_map">在地圖上顯示</string>
    <string name="info">簡介</string>
    <string name="info_ticket">活動規則說明</string>
    <string name="parking">停車場</string>
    <string name="add_travel">加入旅程</string>
    <string name="already_add_travel">已加入旅程</string>
    <string name="check_discount">查看優惠</string>
    <string name="use_discount">使用優惠</string>
    <string name="discount_info">優惠資訊</string>
    <string name="store_info">店家資訊</string>
    <string name="attractions_info">景點資訊</string>
    <string name="description_info">詳細介紹</string>

    <string name="map">地圖</string>

    <string name="add_to_which_travel">將此地點加到哪個旅程中呢？</string>

    <string name="s_eva">則評價</string>
    <string name="miles">公里</string>
    <string name="have_park">有特約停車場</string>
    <string name="no_park">無特約停車場</string>
    <string name="coupon_used">已兌換過此優惠</string>
    <string name="coupon_over">已過期</string>

    <string name="have_parking">此地點有特約停車場，
\n是否將停車場同時加到旅程中？</string>
    <string name="enter_eva">請輸入30字以內評價</string>
    <string name="give_who_eva">給 %s 的評分</string>

    <string name="my_favorite">我的收藏</string>
    <string name="ticket">優惠券</string>
    <string name="store">店家</string>
    <string name="attractions">景點</string>
    <string name="travel">旅程</string>
    <string name="my_travel">我的旅程</string>
    <string name="cus_travel_stop">自訂旅程的停靠站</string>
    <string name="save_travel">收藏旅程</string>
    <string name="start_travel">開始導航</string>
    <string name="google_now">立即導航</string>
    <string name="input_name">輸入名稱</string>
    <string name="plz_give_travel_name">請為此旅程命名</string>

    <string name="type_store">商店</string>
    <string name="park">停車場</string>
    <string name="add_travel_success">新增旅程完成</string>
    <string name="add_travel_fail">新增旅程失敗</string>
    <string name="no_ticket">查無優惠券</string>
    <string name="s_ticket">張優惠券</string>
    <string name="date_end">到期</string>
    <string name="giv_store_eva">給店家評分</string>
    <string name="success_favorite">收藏完成</string>
    <string name="create_date">建立日期</string>
    <string name="del_travel_title">刪除旅程</string>
    <string name="del_travel_content">是否確認刪除旅程</string>

    <string name="current_password">舊密碼</string>
    <string name="new_password">新密碼</string>
    <string name="check_new_password">確認新密碼</string>
    <string name="current_password_hint">請輸入您的當前密碼</string>
    <string name="new_password_hint">請輸入您的新密碼</string>
    <string name="new_password_again_hint">請再次輸入您的新密碼</string>
    <string name="change_finish">修改完成</string>
    
    <string name="ticket_date">活動日期</string>
    <string name="ticket_info">活動主題</string>
    <string name="ticket_des">活動說明</string>

    <string name="feedback_title">回報成功</string>
    <string name="feedback_content">感謝您的反饋</string>

    <string name="start_soon">此服務尚在建置中</string>

    <string name="scan_ticket">掃描優惠券</string>
    <string name="scan_car">掃描登入車機</string>
    <string name="scan_favorite">掃描 QR Code</string>

    <string name="near_no_store">附近尚無店家與景點</string>
    <string name="change_code">兌換條碼</string>

    <string name="close_for_now">暫時關閉中</string>
    <string name="already_close">已歇業</string>

    <string name="privacy_info">非常歡迎您光臨「SHOU GO」（以下簡稱本網站），為了讓您能夠安心的使用本網站的各項服務與資訊，特此向您說明本網站的隱私權保護政策，以保障您的權益，請您詳閱下列內容：
\n\n一、隱私權保護政策的適用範圍\n
隱私權保護政策內容，包括本網站如何處理在您使用網站服務時收集到的個人識別資料。隱私權保護政策不適用於本網站以外的相關連結網站，也不適用於非本網站所委託或參與管理的人員。
\n\n二、個人資料的蒐集、處理及利用方式\n
當您造訪本網站或使用本網站所提供之功能服務時，我們將視該服務功能性質，請您提供必要的個人資料，並在該特定目的範圍內處理及利用您的個人資料；非經您書面同意，本網站不會將個人資料用於其他用途。\n
本網站在您使用服務信箱、問卷調查等互動性功能時，會保留您所提供的姓名、電子郵件地址、聯絡方式及使用時間等。\n
於一般瀏覽時，伺服器會自行記錄相關行徑，包括您使用連線設備的IP位址、使用時間、使用的瀏覽器、瀏覽及點選資料記錄等，做為我們增進網站服務的參考依據，此記錄為內部應用，決不對外公佈。\n
為提供精確的服務，我們會將收集的問卷調查內容進行統計與分析，分析結果之統計數據或說明文字呈現，除供內部研究外，我們會視需要公佈統計數據及說明文字，但不涉及特定個人之資料。
\n\n三、資料之保護\n
本網站主機均設有防火牆、防毒系統等相關的各項資訊安全設備及必要的安全防護措施，加以保護網站及您的個人資料採用嚴格的保護措施，只由經過授權的人員才能接觸您的個人資料，相關處理人員皆簽有保密合約，如有違反保密義務者，將會受到相關的法律處分。\n
如因業務需要有必要委託其他單位提供服務時，本網站亦會嚴格要求其遵守保密義務，並且採取必要檢查程序以確定其將確實遵守。
\n\n四、網站對外的相關連結\n
本網站的網頁提供其他網站的網路連結，您也可經由本網站所提供的連結，點選進入其他網站。但該連結網站不適用本網站的隱私權保護政策，您必須參考該連結網站中的隱私權保護政策。
\n\n五、與第三人共用個人資料之政策\n
本網站絕不會提供、交換、出租或出售任何您的個人資料給其他個人、團體、私人企業或公務機關，但有法律依據或合約義務者，不在此限。
\n\n前項但書之情形包括不限於：
\n\n經由您書面同意。
法律明文規定。\n
為免除您生命、身體、自由或財產上之危險。\n
與公務機關或學術研究機構合作，基於公共利益為統計或學術研究而有必要，且資料經過提供者處理或蒐集者依其揭露方式無從識別特定之當事人。\n
當您在網站的行為，違反服務條款或可能損害或妨礙網站與其他使用者權益或導致任何人遭受損害時，經網站管理單位研析揭露您的個人資料是為了辨識、聯絡或採取法律行動所必要者。\n
有利於您的權益。\n
本網站委託廠商協助蒐集、處理或利用您的個人資料時，將對委外廠商或個人善盡監督管理之責。
\n\n六、Cookie之使用\n
為了提供您最佳的服務，本網站會在您的電腦中放置並取用我們的Cookie，若您不願接受Cookie的寫入，您可在您使用的瀏覽器功能項中設定隱私權等級為高，即可拒絕Cookie的寫入，但可能會導致網站某些功能無法正常執行 。
\n\n七、隱私權保護政策之修正\n
本網站隱私權保護政策將因應需求隨時進行修正，修正後的條款將刊登於網站上。</string>

    <string name="service_info">非常歡迎您光臨「SHOU GO」（以下簡稱本網站），為了讓您能夠安心的使用本網站的各項服務與資訊，特此向您說明本網站的隱私權保護政策，以保障您的權益，請您詳閱下列內容：
\n\n一、隱私權保護政策的適用範圍\n
隱私權保護政策內容，包括本網站如何處理在您使用網站服務時收集到的個人識別資料。隱私權保護政策不適用於本網站以外的相關連結網站，也不適用於非本網站所委託或參與管理的人員。
\n\n二、個人資料的蒐集、處理及利用方式\n
當您造訪本網站或使用本網站所提供之功能服務時，我們將視該服務功能性質，請您提供必要的個人資料，並在該特定目的範圍內處理及利用您的個人資料；非經您書面同意，本網站不會將個人資料用於其他用途。\n
本網站在您使用服務信箱、問卷調查等互動性功能時，會保留您所提供的姓名、電子郵件地址、聯絡方式及使用時間等。\n
於一般瀏覽時，伺服器會自行記錄相關行徑，包括您使用連線設備的IP位址、使用時間、使用的瀏覽器、瀏覽及點選資料記錄等，做為我們增進網站服務的參考依據，此記錄為內部應用，決不對外公佈。\n
為提供精確的服務，我們會將收集的問卷調查內容進行統計與分析，分析結果之統計數據或說明文字呈現，除供內部研究外，我們會視需要公佈統計數據及說明文字，但不涉及特定個人之資料。
\n\n三、資料之保護\n
本網站主機均設有防火牆、防毒系統等相關的各項資訊安全設備及必要的安全防護措施，加以保護網站及您的個人資料採用嚴格的保護措施，只由經過授權的人員才能接觸您的個人資料，相關處理人員皆簽有保密合約，如有違反保密義務者，將會受到相關的法律處分。\n
如因業務需要有必要委託其他單位提供服務時，本網站亦會嚴格要求其遵守保密義務，並且採取必要檢查程序以確定其將確實遵守。
\n\n四、網站對外的相關連結\n
本網站的網頁提供其他網站的網路連結，您也可經由本網站所提供的連結，點選進入其他網站。但該連結網站不適用本網站的隱私權保護政策，您必須參考該連結網站中的隱私權保護政策。
\n\n五、與第三人共用個人資料之政策\n
本網站絕不會提供、交換、出租或出售任何您的個人資料給其他個人、團體、私人企業或公務機關，但有法律依據或合約義務者，不在此限。
\n\n前項但書之情形包括不限於：
\n\n經由您書面同意。
法律明文規定。\n
為免除您生命、身體、自由或財產上之危險。\n
與公務機關或學術研究機構合作，基於公共利益為統計或學術研究而有必要，且資料經過提供者處理或蒐集者依其揭露方式無從識別特定之當事人。\n
當您在網站的行為，違反服務條款或可能損害或妨礙網站與其他使用者權益或導致任何人遭受損害時，經網站管理單位研析揭露您的個人資料是為了辨識、聯絡或採取法律行動所必要者。\n
有利於您的權益。\n
本網站委託廠商協助蒐集、處理或利用您的個人資料時，將對委外廠商或個人善盡監督管理之責。
\n\n六、Cookie之使用\n
為了提供您最佳的服務，本網站會在您的電腦中放置並取用我們的Cookie，若您不願接受Cookie的寫入，您可在您使用的瀏覽器功能項中設定隱私權等級為高，即可拒絕Cookie的寫入，但可能會導致網站某些功能無法正常執行 。
\n\n七、隱私權保護政策之修正\n
本網站隱私權保護政策將因應需求隨時進行修正，修正後的條款將刊登於網站上。</string>
</resources>