<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:gravity="center_horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:id="@+id/pass"
                android:textColor="#9B9B9B"
                android:textSize="@dimen/main_title_size"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="36dp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#9B9B9B"
                android:layout_below="@+id/pass"
                android:layout_alignLeft="@+id/pass"
                android:layout_alignRight="@+id/pass"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teach_2"
                android:textColor="@color/white"
                android:textSize="@dimen/main_big_title_size"
                android:gravity="center"
                android:id="@+id/title1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teach_2_1"
                android:textColor="@color/white"
                android:textSize="@dimen/main_title_size"
                android:gravity="center"
                android:id="@+id/title2"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:id="@+id/img"
            android:scaleType="fitCenter"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/btn_weight"
            android:layout_height="@dimen/btn_height"
            android:text="@string/start_now"
            android:textSize="@dimen/main_title_size"
            android:textColor="@color/black"
            android:background="@drawable/btn_white"
            android:visibility="invisible"
            android:id="@+id/start"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/features_introduce"
            android:textColor="@color/white"
            android:textSize="@dimen/main_title_size"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/passView">
        </RelativeLayout>
    </LinearLayout>
</layout>