<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg_gray"
        android:paddingLeft="@dimen/btn_p_l"
        android:paddingRight="@dimen/btn_p_r">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_login"
            android:textColor="@color/main_black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textSize="@dimen/main_big_title_size"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg10_white"
            android:elevation="3dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">
            <com.company.shougo.widget.EditWidget
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                app:type="email"
                android:id="@+id/email"/>
            <com.company.shougo.widget.EditWidget
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:type="pwd"
                android:id="@+id/pwd"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textSize="@dimen/main_lit_text_size"
                android:textColor="@color/main_black"
                android:buttonTint="@color/black"
                android:id="@+id/remember"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_pwd"
                android:textColor="@color/line_red"
                android:textSize="@dimen/main_text_size"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:id="@+id/forget"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/login"
            android:textSize="@dimen/main_title_size"
            android:textColor="@color/white"
            android:background="@drawable/bg35_black"
            android:id="@+id/login"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="38dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_acc_register"
                android:textSize="@dimen/main_text_size"
                android:layout_centerVertical="true"
                android:textColor="@color/gray_2"
                android:id="@+id/haveNoAcc"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textSize="@dimen/main_text_size"
                android:textColor="@color/gray_2"
                android:paddingTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/haveNoAcc"
                android:id="@+id/register"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray_2"
                android:layout_below="@+id/register"
                android:layout_alignLeft="@+id/register"
                android:layout_alignRight="@+id/register"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>
    </LinearLayout>

</layout>