<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/black">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/splash_logo"
            android:id="@+id/logo"
            android:scaleType="fitCenter"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.8"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            android:paddingLeft="@dimen/btn_p_l"
            android:paddingRight="@dimen/btn_p_r"
            android:layout_marginBottom="40dp">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="@dimen/btn_weight"
                android:layout_height="@dimen/btn_height"
                android:background="@drawable/btn_white"
                android:text="@string/create_new_acc"
                android:textSize="@dimen/main_title_size"
                android:textColor="@color/black"
                android:id="@+id/register"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:background="@color/gray"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/or"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/main_lit_text_size"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:background="@color/gray"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_acc_login"
                    android:textSize="@dimen/main_text_size"
                    android:textColor="@color/gray"
                    android:id="@+id/haveAcc"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="@dimen/main_text_size"
                    android:textColor="@color/gray"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/haveAcc"
                    android:id="@+id/login"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_below="@+id/login"
                    android:layout_alignLeft="@+id/login"
                    android:layout_alignRight="@+id/login"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</layout>