<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg10_gray"
            android:layout_margin="8dp"
            android:elevation="5dp"
            android:paddingTop="8dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textSize="@dimen/main_text_size" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/list"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/black"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/locationTitle"
                android:textSize="@dimen/main_text_size" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/locationList"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:background="@drawable/bg35_black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/confirm"
                android:textSize="@dimen/main_title_size"
                android:textColor="@color/white"
                android:id="@+id/confirm" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>